@@ -20,7 +20,7 @@ An example, from http://www.w3.org/TR/CSS21/propidx.html:
 
 This module also provides some mixin grammars and actions as follows:
 
-- `CSS::Specification::Terms` + `CSS::Specification::Terms::Actions` - is a grammar which maps property specification terminology to CSS Core syntax and defines any newly introduced terms. For example `integer` is mapped to `int`.
+- `CSS::Specification::Defs` + `CSS::Specification::Defs::Actions` - is a grammar which maps property specification terminology to CSS Core syntax and defines any newly introduced terms. For example `integer` is mapped to `int`.
 
 ## Programs
 This module provides `css-gen-properties`. A program for translating property definitions
