@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - Rename grammar CSS::Specification::Terms -> CSS::Specificaton::Defs
 
 0.4.9  2021-04-06T07:10:48+12:00
   - Don't special-case unknown properties in `:lax` mode - let the
@@ -16,7 +17,7 @@
 0.4.2 Bugfix a length can be a percentage quantity
 - Also reinstate t/terms.t, lost around 538f043
 0.4.1 Output a specific unit for zero quantities.
-- For example the as for length '0' is now :px(0) rather than :length(0).
+- For example the ast for length '0' is now :px(0) rather than :length(0).
 0.4.0 Added rule declarations.
 - It's now possible to define rules for sharing between properties. For example
       <voice-family> := male | female | child
